Add profile content and fix portfolio flex boxes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-/* Body Styling */
+/* CSS basic reset and Body Styling */
 
 * {
     margin: 0;
@@ -55,7 +55,6 @@ a {
     display: flex;
     border-bottom: 2px solid #cccccc;
     width: 100%;
-    height: 80px;
 }
 
 .link {
@@ -71,7 +70,7 @@ h2 {
 }
 
 p {
-    padding: 15px;
+    padding: 10px;
     line-height: 1.3em;
 }
 
@@ -120,11 +119,6 @@ textarea {
 
 /* Portfolio Styling */
 
-.portfolioList {
-    display: inline-block;
-    position: absolute:
-}
-
 h3 {
     position: relative;
     bottom: 105px;
@@ -135,6 +129,12 @@ h3 {
     color: #ffffff;
 }
 
+.flex-item img {
+    height: 220px;
+    width: 300px;
+}
+
+
 .text-block {
     background-color: #4aaaa5;
     position: absolute;
@@ -143,10 +143,14 @@ h3 {
     height: 10px;
 }
 
-li img {
-    height: 220px;
-    width: 300px;
-    margin: 20px 0px;
+.flex-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.flex-item {
+    margin: 0px 20px;
 }
 
 /* Footer */
